Setup alacritty config and organize codebase
- Add alacritty config symlink to install.sh
- Remove broken sudo patterns (<<< heredoc)
- Remove 9.3GB of nested backup dirs
- Comment out non-existent wallpaper script in autostart
- Add ALACRITTY_CONFIG_DIR to config.sh